--- a/src/Main/main.css
+++ b/src/Main/main.css
@@ -5,7 +5,6 @@
 .default {
     background-color: white;
     color: black;
-
 }
   
 .dark {
@@ -15,8 +14,7 @@
 
 #nav {
     display: flex;
-    align-items: center;
-    padding: 10px 20px;
+    padding: 5px 20px;
 }
 
 .default-nav {
@@ -28,19 +26,22 @@
 }
 
 #title {
-    
+    padding-top: 10px;
 }
 
 #question-icon {
     height: 30px;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 25px;
+    padding-top: 15px;
     cursor: pointer;
 }
 
 #settings-icon {
-    width: 30px;
-    margin-right: 20px;
+    width: 32px;
+    height: 30px;
+    margin-right: 10px;
+    padding-top: 15px;
     cursor: pointer;
 }
 
@@ -51,15 +52,65 @@
 
 .panel {
     margin-top: 40px;
-    padding: 10px 40px;
+    padding: 15px 40px;
     width: 300px;
     position: absolute;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: white;
+    font-size: 1.1em;
 }
 
 #close-icon {
     width: 25px;
     margin: 0 300px;
     cursor: pointer;
+}
+
+.panel h2, h3 {
+    padding: 10px 0;
+    text-align: center;
+}
+
+.panel li {
+    padding: 5px 0;
+}
+
+#settings-buttons {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 200px;
+}
+
+#settings-buttons button {
+    margin: 10px;
+    padding: 10px;
+    background-color: white;
+    border: 2px solid grey;
+    border-radius: 10px;
+    font-size: 1.3em;
+}
+
+#settings-buttons button:hover {
+    cursor: pointer;
+    background-color: #F5F5F5;
+}
+
+@media only screen and (min-width: 1000px) {
+    #title {
+        margin: 0 auto;
+        padding-left: 100px;
+        font-size: 2.7em;
+    }
+
+    #question-icon {
+        margin-left: 0;
+        margin-right: 0;
+        padding-right: 20px;
+    }
+    
+    #settings-icon {
+        margin-right: 0;
+        padding-right: 20px;
+    }
 }
